fixed services jumbotron image not showing

--- a/services.css
+++ b/services.css
@@ -1,1 +1,1 @@
--moz-transform arguments{-ms-transform:arguments;-o-transform:arguments;transform:arguments}.jumbotron{background-image:url("images/wendi-serving.jpg");background-repeat:no-repeat;background-position:right 0 bottom -400px;background-size:cover}
+-moz-transform arguments{-ms-transform:arguments;-o-transform:arguments;transform:arguments}.jumbotron{background-image:url("images/wendi-serving.jpg");background-repeat:no-repeat;background-position:right 0 bottom 100%;background-size:cover}
