--- a/src/css/global.styl
+++ b/src/css/global.styl
@@ -16,7 +16,7 @@ body
       background-color #fff
       margin 0 auto
       border-radius 5px
-      width 50%
+      width 30%
       h1
         font-family 'Cookie', cursive
         font-size 4.2rem
@@ -147,6 +147,7 @@ body
   .page
     .jumbotron
       .topview
+        width 50%
         h1
           font-size 3rem
         span
